--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,7 +74,8 @@ dependencies {
     api 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.2'
 
     //glide图片加载库
-    api 'com.github.bumptech.glide:glide:3.7.0'
+//    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     api 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
