--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,4 +103,9 @@ dependencies {
     implementation "org.greenrobot:eventbus:3.3.1"
     implementation 'me.jessyan:autosize:1.1.2'
     implementation 'com.github.wdsqjq:AndRatingBar:1.0.6'
+    implementation 'net.margaritov.preference.colorpicker.ColorPickerPreference:ColorPickerPreference:1.0.0'
+
+//    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.3'
+//    releaseImplementation  'com.squareup.leakcanary:leakcanary-android:2.3'
+
 }
