--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,16 +12,26 @@ android {
         minSdk 24
         targetSdk 33
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+    }
+
+    signingConfigs {
+        release {
+            storeFile file('tmdb.jks')
+            storePassword 'tmdb123456'
+            keyAlias 'tmdb'
+            keyPassword 'tmdb123456'
+        }
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     compileOptions {
@@ -40,6 +50,13 @@ android {
         schemaVersion 1 //数据库版本号
         daoPackage 'com.goku.tmdb.data.greendao'// 设置DaoMaster、DaoSession、Dao   一般包名+文件夹名
         targetGenDir 'src/main/java'//设置DaoMaster、DaoSession、Dao目录   文件生成的目录，相当于父级目录
+    }
+
+    android.applicationVariants.all {
+        variant ->
+            variant.outputs.all {
+                outputFileName = "TMDB_${variant.versionName}_(${variant.versionCode}).apk"
+            }
     }
 }
 
